# MavLink

doc/: MavLink2.0使用说明.pptx  mavlink-generate安装教程.md
message_definitions/: motor_param.xml
src/: CMakeLists.txt
src/Master/: CMakeLists.txt  MavlinkResolver.cc  MavlinkResolver.h  mainwindow.cc  mainwindow.h  mainwindow.ui
src/Mavlink/motor_param/: gtestsuite.hpp  mavlink.h  mavlink_msg_motorparameter.h  mavlink_msg_motorparameter.hpp  motor_param.h  motor_param.hpp  testsuite.h  version.h
src/Slaver/: CMakeLists.txt  MavlinkWrapper.cc  MavlinkWrapper.h  mainwindow.cc  mainwindow.h  mainwindow.ui
